--- a/app/views/blog_posts/new.html.erb
+++ b/app/views/blog_posts/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_with model: @blog_post do |form| %>
     <% if form.object.errors.any? %>
         <div>
-            <% form.object.errors.full_messages do |message| %>
+            <% form.object.errors.full_messages.each do |message| %>
                 <div><%= message %></div>
             <% end %>
         </div>
