--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="prose">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
